@@ -688,6 +688,18 @@ if not preconfigured:
     else:
         env['SKIPPED_DEPS'].extend(['cairo','cairomm'])
 
+    # allow for mac osx /usr/lib/libicucore.dylib compatibility
+    # requires custom supplied headers since Apple does not include them
+    # details: http://lists.apple.com/archives/xcode-users/2005/Jun/msg00633.html
+    # To use system lib download and make && make install one of these:
+    # http://www.opensource.apple.com/tarballs/ICU/
+    # then copy the headers to a location that mapnik will find
+    if 'core' in env['ICU_LIB_NAME']:
+        env.Append(CXXFLAGS = '-DU_HIDE_DRAFT_API')
+        env.Append(CXXFLAGS = '-DUDISABLE_RENAMING')
+        if os.path.exists(env['ICU_LIB_NAME']):
+            env['ICU_LIB_NAME'] = os.path.basename(env['ICU_LIB_NAME']).replace('.dylib','').replace('lib','')
+
     LIBSHEADERS = [
         ['m', 'math.h', True,'C'],
         ['ltdl', 'ltdl.h', True,'C'],
@@ -699,15 +711,6 @@ if not preconfigured:
         [env['ICU_LIB_NAME'],'unicode/unistr.h',True,'C++'],
     ]
 
-    # allow for mac osx /usr/lib/libicucore.dylib compatibility
-    # requires custom supplied headers since Apple does not include them
-    # details: http://lists.apple.com/archives/xcode-users/2005/Jun/msg00633.html
-    # To use system lib download and make && make install one of these:
-    # http://www.opensource.apple.com/tarballs/ICU/
-    # then copy the headers to a location that mapnik will find
-    if env['ICU_LIB_NAME'] == 'icucore':
-        env.Append(CXXFLAGS = '-DU_HIDE_DRAFT_API')
-        env.Append(CXXFLAGS = '-DUDISABLE_RENAMING')
     
     for libinfo in LIBSHEADERS:
         if not conf.CheckLibWithHeader(libinfo[0], libinfo[1], libinfo[3]):
@@ -868,7 +871,7 @@ if not preconfigured:
         # fetch the mapnik version header in order to set the
         # ABI version used to build libmapnik.so on linux in src/SConscript
         abi = conf.GetMapnikLibVersion()
-        abi_fallback = [0,7,0]
+        abi_fallback = [0,7,1]
         if not abi:
             color_print(1,'Problem encountered parsing mapnik version, falling back to %s' % abi_fallback)
             env['ABI_VERSION'] = abi_fallback
@@ -1021,6 +1024,9 @@ if not preconfigured:
 
 # autogenerate help on default/current SCons options
 Help(opts.GenerateHelpText(env))
+
+#env.Prepend(CPPPATH = '/usr/local/include')
+#env.Prepend(LIBPATH = '/usr/local/lib')
 
 #### Builds ####
 if not HELP_REQUESTED:
