@@ -12,6 +12,13 @@ For a complete change history, see the SVN log.
 
 
 
+Mapnik 0.7.1 Release
+--------------------
+
+- AGG Renderer - Enforced default gamma function on all symbolizers to ensure proper antialiasing
+  even when gamma is modified on the PolygonSymbolizer. (#512)
+
+
 Mapnik 0.7.0 Release
 --------------------
 
